--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,12 +2,27 @@ architectury {
     common rootProject.enabled_platforms.split(',')
 }
 
+repositories {
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
+}
+
 dependencies {
     // We depend on Fabric Loader here to use the Fabric @Environment annotations,
     // which get remapped to the correct annotations on each platform.
     // Do NOT use other classes from Fabric Loader.
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
-
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}"
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     // modImplementation "dev.architectury:architectury:$rootProject.architectury_api_version"
+
+    modImplementation "maven.modrinth:iris:${iris_version}+${minecraft_version}-fabric"
+    modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-fabric"
+
+    
 }
