--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -6,7 +6,16 @@ architectury {
     platformSetupLoomIde()
     fabric()
 }
-
+repositories {
+    maven { url "https://maven.terraformersmc.com/releases/" }
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
+}
 configurations {
     common {
         canBeResolved = true
@@ -32,6 +41,17 @@ dependencies {
 
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     // modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
+
+    modImplementation "me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}"
+    modImplementation "com.terraformersmc:modmenu:${mod_menu_version}"
+    modImplementation "maven.modrinth:iris:${iris_version}+${minecraft_version}-fabric"
+    modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-fabric"
+
+    implementation "org.anarres:jcpp:1.4.14"
+    implementation "org.antlr:antlr4-runtime:4.13.1"
+    implementation "io.github.douira:glsl-transformer:3.0.0-pre3"
+
+    modLocalRuntime "maven.modrinth:renderscale:1.3.6"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
