--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,10 @@ architectury_api_version = 19.0.1
 fabric_loader_version = 0.18.4
 fabric_api_version = 0.141.3+1.21.11
 neoforge_version = 21.11.38-beta
+cloth_config_api_version = 21.11.153
+iris_version = 1.10.5
+sodium_version = 0.8.4
+mod_menu_version = 17.0.0-beta.2
+
+# Goodbye loom error
+loom.ignoreDependencyLoomVersionValidation=true
