--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -29,6 +29,13 @@ repositories {
         name = 'NeoForged'
         url = 'https://maven.neoforged.net/releases'
     }
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
 }
 
 dependencies {
@@ -37,6 +44,12 @@ dependencies {
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     // modImplementation "dev.architectury:architectury-neoforge:$rootProject.architectury_api_version"
 
+    modImplementation "me.shedaniel.cloth:cloth-config-neoforge:${cloth_config_api_version}"
+    modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-neoforge"
+    modLocalRuntime "maven.modrinth:iris:${iris_version}+${minecraft_version}-neoforge"
+
+
+    modLocalRuntime "maven.modrinth:renderscale:1.3.6"
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
 }
