fix: implement applyWorkaround according to GPU vendor and platform

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     modImplementation "maven.modrinth:iris:${iris_version}+${minecraft_version}-fabric"
     modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-fabric"
 
-    
+    implementation 'com.github.oshi:oshi-core:6.9.3'
 }
