--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
 
     modImplementation "me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}"
-    modImplementation "com.terraformersmc:modmenu:${mod_menu_version}"
+    modImplementation "maven.modrinth:modmenu:${mod_menu_version}"
     modImplementation "maven.modrinth:iris:${iris_version}+${minecraft_version}-fabric"
     modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-fabric"
 
