--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     //modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-neoforge"
     modLocalRuntime "maven.modrinth:iris:${iris_version}+${minecraft_version}-neoforge"
 
+    implementation 'ar.com.hjg:pngj:2.1.0'
+    include 'ar.com.hjg:pngj:2.1.0'
 
     modLocalRuntime "maven.modrinth:renderscale:1.3.6"
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
