port: backported to 1.21.10

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,17 +9,17 @@ archives_name = hdr_mod
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21.11
+minecraft_version = 1.21.10
 
 # Dependencies
-architectury_api_version = 19.0.1
+architectury_api_version = 18.0.8
 fabric_loader_version = 0.18.4
-fabric_api_version = 0.141.3+1.21.11
-neoforge_version = 21.11.38-beta
-cloth_config_api_version = 21.11.153
-iris_version = 1.10.5
-sodium_version = 0.8.4
-mod_menu_version = 17.0.0-beta.2
+fabric_api_version = 0.138.4+1.21.10
+neoforge_version = 21.10.64
+cloth_config_api_version = 20.0.149
+iris_version = 1.9.7
+sodium_version = 0.7.3
+mod_menu_version = 16.0.0
 
 # Goodbye loom error
 loom.ignoreDependencyLoomVersionValidation=true
