--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -54,9 +54,9 @@ dependencies {
     implementation 'ar.com.hjg:pngj:2.1.0'
     include 'ar.com.hjg:pngj:2.1.0'
 
-    modLocalRuntime "maven.modrinth:renderscale:1.3.6"
-    modLocalRuntime "maven.modrinth:spark:1.10.156-fabric"
-    modLocalRuntime "maven.modrinth:fabric-permissions-api:0.6.1"
+    //modLocalRuntime "maven.modrinth:renderscale:1.3.4"
+    modLocalRuntime "maven.modrinth:spark:1.10.152-fabric"
+    modLocalRuntime "maven.modrinth:fabric-permissions-api:0.5.0"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
