--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'ar.com.hjg:pngj:2.1.0'
     include 'ar.com.hjg:pngj:2.1.0'
 
-    modLocalRuntime "maven.modrinth:renderscale:1.3.6"
+    //modLocalRuntime "maven.modrinth:renderscale:1.3.6"
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
 }
