--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0.1
+mod_version = 1.0.1-1.21.10
 maven_group = xyz.rrtt217.HDRMod
 archives_name = hdr_mod
 enabled_platforms = fabric,neoforge
