--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -49,14 +49,14 @@ dependencies {
 
     implementation "org.anarres:jcpp:1.4.14"
     implementation "org.antlr:antlr4-runtime:4.13.1"
-    implementation "io.github.douira:glsl-transformer:3.0.0-pre3"
+    implementation "io.github.douira:glsl-transformer:2.0.1"
 
     implementation 'ar.com.hjg:pngj:2.1.0'
     include 'ar.com.hjg:pngj:2.1.0'
 
-    //modLocalRuntime "maven.modrinth:renderscale:1.3.4"
-    modLocalRuntime "maven.modrinth:spark:1.10.152-fabric"
-    modLocalRuntime "maven.modrinth:fabric-permissions-api:0.5.0"
+    modLocalRuntime "maven.modrinth:renderscale:1.3.5"
+    //modLocalRuntime "maven.modrinth:spark:1.10.152-fabric"
+    //modLocalRuntime "maven.modrinth:fabric-permissions-api:0.5.0"
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive = false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
