--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     modImplementation "me.shedaniel.cloth:cloth-config-neoforge:${cloth_config_api_version}"
     //modImplementation "maven.modrinth:sodium:mc${minecraft_version}-${sodium_version}-neoforge"
-    modLocalRuntime "maven.modrinth:iris:${iris_version}+${minecraft_version}-neoforge"
+    modImplementation "maven.modrinth:iris:${iris_version}+${minecraft_version}-neoforge"
 
     implementation 'ar.com.hjg:pngj:2.1.0'
     include 'ar.com.hjg:pngj:2.1.0'
